--- a/index.html
+++ b/index.html
@@ -17,187 +17,215 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav class="menu">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-dark">Studio</span></a
-        >
-        <ul class="page-nav">
-          <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="contakts">
-        <ul class="address">
-          <li>
-            <a href="mailto:info@devstudio.com" class="address-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="address-link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="page-header">
+      <div class="container header-container">
+        <nav class="menu">
+          <a href="./index.html" class="logo header-logo"
+            >Web<span class="logo-dark">Studio</span></a
+          >
+          <ul class="page-nav">
+            <li><a href="./index.html" class="link">Studio</a></li>
+            <li><a href="" class="link">Portfolio</a></li>
+            <li><a href="" class="link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contakts">
+          <ul class="address">
+            <li>
+              <a href="mailto:info@devstudio.com" class="address-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="address-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
+
     <main>
       <section class="main-title">
-        <h1 class="title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+        <div class="container main-container">
+          <h1 class="title">Effective Solutions for Your Business</h1>
+          <button type="button" class="button">Order Service</button>
+        </div>
       </section>
 
       <section>
-        <h2 class="visually-hidden">list of benefits</h2>
-        <ul class="benefits">
-          <li>
-            <h3 class="sub-subtitle">Strategy</h3>
-            <p class="paragraph-first">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
+        <div class="container">
+          <h2 class="visually-hidden">list of benefits</h2>
+          <ul class="benefits">
+            <li class="li-benefits">
+              <h3 class="sub-subtitle">Strategy</h3>
+              <p class="paragraph-first">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="sub-subtitle">Punctuality</h3>
-            <p class="paragraph-first">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
+            <li class="li-benefits">
+              <h3 class="sub-subtitle">Punctuality</h3>
+              <p class="paragraph-first">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="sub-subtitle">Diligence</h3>
-            <p class="paragraph-first">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
+            <li class="li-benefits">
+              <h3 class="sub-subtitle">Diligence</h3>
+              <p class="paragraph-first">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="sub-subtitle">Technologies</h3>
-            <p class="paragraph-first">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+            <li class="li-benefits">
+              <h3 class="sub-subtitle">Technologies</h3>
+              <p class="paragraph-first">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="sub-title">Our Team</h2>
-        <ul class="list-team">
-          <li class="team-card">
-            <img
-              src="./images/img1.jpg"
-              alt="product designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="sub-subtitle">Mark Guerrero</h3>
-            <p class="paragraph">Product Designer</p>
-          </li>
-          <li class="team-card">
-            <img
-              src="./images/img2.jpg"
-              alt="frontend developer"
-              width="264"
-              height="260"
-            />
-            <h3 class="sub-subtitle">Tom Ford</h3>
-            <p class="paragraph">Frontend Developer</p>
-          </li>
-          <li class="team-card">
-            <img
-              src="./images/img3.jpg"
-              alt="marketing"
-              width="264"
-              height="260"
-            />
-            <h3 class="sub-subtitle">Camila Garcia</h3>
-            <p class="paragraph">Marketing</p>
-          </li>
-          <li class="team-card">
-            <img
-              src="./images/img4.jpg"
-              alt="UI designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="sub-subtitle">Daniel Wilson</h3>
-            <p class="paragraph">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="sub-title">Our Team</h2>
+          <ul class="list-team">
+            <li class="team-card">
+              <img
+                src="./images/img1.jpg"
+                alt="product designer"
+                width="264"
+                height="260"
+              />
+              <div class="team-container">
+                <h3 class="sub-subtitle">Mark Guerrero</h3>
+                <p class="paragraph">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                src="./images/img2.jpg"
+                alt="frontend developer"
+                width="264"
+                height="260"
+              />
+              <div class="team-container">
+                <h3 class="sub-subtitle">Tom Ford</h3>
+                <p class="paragraph">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                src="./images/img3.jpg"
+                alt="marketing"
+                width="264"
+                height="260"
+              />
+              <div class="team-container">
+                <h3 class="sub-subtitle">Camila Garcia</h3>
+                <p class="paragraph">Marketing</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img src="./images/img4.jpg" alt="UI designer" width="264" />
+              <div class="team-container">
+                <h3 class="sub-subtitle">Daniel Wilson</h3>
+                <p class="paragraph">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="portfolio">
-        <h2 class="sub-title">Our Portfolio</h2>
-        <ul class="ul-portfolio">
-          <li>
-            <img
-              src="./images/img5.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="sub-subtitle">Banking App</h3>
-            <p class="paragraph">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img6.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="sub-subtitle">Cashless Payment</h3>
-            <p class="paragraph">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img7.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="sub-subtitle">Meditation App</h3>
-            <p class="paragraph">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img8.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="sub-subtitle">Taxi Service</h3>
-            <p class="paragraph">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img9.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h3 class="sub-subtitle">Screen Illustrations</h3>
-            <p class="paragraph">Design</p>
-          </li>
-          <li>
-            <img src="./images/img10.jpg" alt="Online Courses" width="360" />
-            <h3 class="sub-subtitle">Online Courses</h3>
-            <p class="paragraph">Marketing</p>
-          </li>
-        </ul>
+        <div class="container portfolio-container">
+          <h2 class="sub-title">Our Portfolio</h2>
+          <ul class="ul-portfolio">
+            <li class="li-portfolio">
+              <img
+                src="./images/img5.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <div class="container-li-portfolio">
+                <h3 class="sub-subtitle">Banking App</h3>
+                <p class="paragraph">App</p>
+              </div>
+            </li>
+            <li class="li-portfolio">
+              <img
+                src="./images/img6.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="container-li-portfolio">
+                <h3 class="sub-subtitle">Cashless Payment</h3>
+                <p class="paragraph">Marketing</p>
+              </div>
+            </li>
+            <li class="li-portfolio">
+              <img
+                src="./images/img7.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="container-li-portfolio">
+                <h3 class="sub-subtitle">Meditation App</h3>
+                <p class="paragraph">App</p>
+              </div>
+            </li>
+            <li class="li-portfolio">
+              <img
+                src="./images/img8.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <div class="container-li-portfolio">
+                <h3 class="sub-subtitle">Taxi Service</h3>
+                <p class="paragraph">Marketing</p>
+              </div>
+            </li>
+            <li class="li-portfolio">
+              <img
+                src="./images/img9.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <div class="container-li-portfolio">
+                <h3 class="sub-subtitle">Screen Illustrations</h3>
+                <p class="paragraph">Design</p>
+              </div>
+            </li>
+            <li class="li-portfolio">
+              <img src="./images/img10.jpg" alt="Online Courses" width="360" />
+              <div class="container-li-portfolio">
+                <h3 class="sub-subtitle">Online Courses</h3>
+                <p class="paragraph">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo"
-        >Web<span class="logo-light">Studio</span></a
-      >
-      <p class="paragraph-footer">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container-footer">
+        <a href="./index.html" class="logo footer-logo"
+          >Web<span class="logo-light">Studio</span></a
+        >
+        <p class="paragraph-footer">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
