upload new index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="section-benefits">
         <div class="container">
           <h2 class="visually-hidden">list of benefits</h2>
           <ul class="benefits">
@@ -144,7 +144,7 @@
       </section>
       <section class="portfolio">
         <div class="container portfolio-container">
-          <h2 class="sub-title">Our Portfolio</h2>
+          <h2 class="sub-title-porfolio">Our Portfolio</h2>
           <ul class="ul-portfolio">
             <li class="li-portfolio">
               <img
@@ -154,7 +154,7 @@
                 height="300"
               />
               <div class="container-li-portfolio">
-                <h3 class="sub-subtitle">Banking App</h3>
+                <h3 class="sub-subtitle-portfolio">Banking App</h3>
                 <p class="paragraph">App</p>
               </div>
             </li>
@@ -166,7 +166,7 @@
                 height="300"
               />
               <div class="container-li-portfolio">
-                <h3 class="sub-subtitle">Cashless Payment</h3>
+                <h3 class="sub-subtitle-portfolio">Cashless Payment</h3>
                 <p class="paragraph">Marketing</p>
               </div>
             </li>
@@ -178,7 +178,7 @@
                 height="300"
               />
               <div class="container-li-portfolio">
-                <h3 class="sub-subtitle">Meditation App</h3>
+                <h3 class="sub-subtitle-portfolio">Meditation App</h3>
                 <p class="paragraph">App</p>
               </div>
             </li>
@@ -190,7 +190,7 @@
                 height="300"
               />
               <div class="container-li-portfolio">
-                <h3 class="sub-subtitle">Taxi Service</h3>
+                <h3 class="sub-subtitle-portfolio">Taxi Service</h3>
                 <p class="paragraph">Marketing</p>
               </div>
             </li>
@@ -201,14 +201,14 @@
                 width="360"
               />
               <div class="container-li-portfolio">
-                <h3 class="sub-subtitle">Screen Illustrations</h3>
+                <h3 class="sub-subtitle-portfolio">Screen Illustrations</h3>
                 <p class="paragraph">Design</p>
               </div>
             </li>
             <li class="li-portfolio">
               <img src="./images/img10.jpg" alt="Online Courses" width="360" />
               <div class="container-li-portfolio">
-                <h3 class="sub-subtitle">Online Courses</h3>
+                <h3 class="sub-subtitle-portfolio">Online Courses</h3>
                 <p class="paragraph">Marketing</p>
               </div>
             </li>
@@ -217,7 +217,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container-footer">
+      <div class="container">
         <a href="./index.html" class="logo footer-logo"
           >Web<span class="logo-light">Studio</span></a
         >
